--- a/dependencies/CMakeLists.txt
+++ b/dependencies/CMakeLists.txt
@@ -13,4 +13,6 @@ CPMAddPackage(
 CPMAddPackage(
 	GIT_REPOSITORY https://github.com/google/googletest.git
 	GIT_TAG v1.14.0
+	OPTIONS "INSTALL_GTEST OFF"
+	        "gtest_force_shared_crt ON"  # for Windows: prevent overriding parent project's compiler/linker settings
 )
