create demo_common target

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,3 +4,6 @@ add_subdirectory(app)
 add_subdirectory(utils)
 add_subdirectory(loaders)
 add_subdirectory(types)
+
+add_library(demo_common INTERFACE)
+target_link_libraries(demo_common INTERFACE demo_types demo_math demo_loader spdlog::spdlog)
