--- a/src/app/CMakeLists.txt
+++ b/src/app/CMakeLists.txt
@@ -1,4 +1,4 @@
 cmake_minimum_required(VERSION 3.22)
 
 add_executable(DemoApp "DemoApp.cpp")
-target_link_libraries(DemoApp PRIVATE spdlog::spdlog nlohmann_json demo_loader)
+target_link_libraries(DemoApp PRIVATE demo_common)
